fix: aligns share menu

--- a/2-PlantCard/public/css/style.css
+++ b/2-PlantCard/public/css/style.css
@@ -85,6 +85,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .profile-container {
@@ -133,6 +134,8 @@ body {
     padding: 0.625rem 0.9375rem;
     gap: 0.9375rem;
     transition: 0.5s;
+    top: -50px;
+    right: -0px;
 }
 
 #share-menu.active {
